--- a/Spinner/Spinner.css
+++ b/Spinner/Spinner.css
@@ -1,5 +1,14 @@
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading-circle path{
+  fill: var(--secondary-color);
+}
 .loading-circle:hover path {
-    fill: red;
+    fill:  var(--primary-color);
   }
   
   #loading-circle {  
@@ -61,12 +70,12 @@
   }
   /*dos*/
   .loadin-zoom {
-    width: 10px;
-    height: 10px;
+    width: 20px;
+    height: 20px;
     border-radius: 50%;
-    border: 5px solid white;
-    border-top: 5px solid greenyellow;
-    border-bottom: 5px solid greenyellow;
+    border: 10px solid white;
+    border-top: 10px solid var(--secondary-color);
+    border-bottom: 10px solid var(--secondary-color);
     animation: anim10 2s linear infinite;
     position: relative;
     display: flex;
@@ -75,9 +84,9 @@
   }
   
   .loadin-zoom .center {
-    width: 20px;
-    height: 20px;
-    background-color: rgba(30, 255, 0, 0.6);
+    width: 40px;
+    height: 40px;
+    background-color: var(--primary-color);
     position: absolute;
     border-radius: 50%;
     animation: scaleUp 2s linear infinite forwards;
@@ -113,17 +122,18 @@
   #blocks {
     margin: auto;
   }
-  #caption {
+  .caption {
     padding-left: 0.5em;
     margin: auto;
     font-size: 2.5em;
+    color: var(--secondary-color);
   }
   .b {
-    background: #d5fff7;
-    border: 0.3em solid #89f2f2;
-    width: 4.5em;
-    height: 4.5em;
-    border-radius: 0.5em;
+    background: var(--primary-color);
+    border: 0.4em solid var(--tertiary-color);
+    width: 4em;
+    height: 4em;
+    border-radius: 0.25em;
     margin: 1em;
     position: relative;
     animation-duration: 1.2s;
@@ -197,10 +207,20 @@
     #building {
       width: 100%
     }
-    #caption {
+    .caption {
       display: none;
     }
   }
+
+/*cuatro*/
+.stop-color-one{
+  stop-color: var(--primary-color);
+}
+
+.stop-color-two{
+  stop-color: var(--secondary-color);
+}
+
 /*cinco*/
 
 .container--loader {
@@ -214,25 +234,73 @@
   
   .hexagon {
     fill: none;
-    stroke-width: 0.075;
+    stroke-width: 0.13;
     transition: fill 0.5s ease;
   }
   
   .background {
-    stroke: papayawhip;
+    stroke: var(--primary-color);
   }
   
   .trace {
-    stroke: palevioletred;
+    stroke: var(--secondary-color);
     stroke-dasharray: 1 2;
-    stroke-dashoffset: 2;
+    stroke-dashoffset: 5;
     stroke-linecap: round;
-    animation: spin-load 1s ease-in-out infinite;
+    animation: spin-load 1.8s ease-in-out infinite;
   
   }
   
   @keyframes spin-load {
     100% {
       stroke-dashoffset: -1;
+    }
+  }
+
+  /* seis*/
+  .spinner {
+    margin: 100px auto;
+    width: 80px;
+    height: 80px;
+    position: relative;
+    text-align: center;
+    -webkit-animation: rotate 2.0s infinite linear;
+    animation: rotate 2.0s infinite linear;
+  }
+  
+  .dot1, .dot2 {
+    width: 60%;
+    height: 60%;
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    background-color: var(--primary-color);
+    border-radius: 80%;
+    -webkit-animation: bounce 2.0s infinite ease-in-out;
+    animation: bounce 2.0s infinite ease-in-out;
+  }
+  
+  .dot2 {
+    top: auto;
+    bottom: 0px;
+    -webkit-animation-delay: -1.0s;
+    animation-delay: -1.0s;
+  }
+  
+  @-webkit-keyframes rotate { 100% { -webkit-transform: rotate(360deg) }}
+  @keyframes rotate { 100% { transform: rotate(360deg); -webkit-transform: rotate(360deg) }}
+  
+  @-webkit-keyframes bounce {
+    0%, 100% { -webkit-transform: scale(0.0) }
+    50% { -webkit-transform: scale(1.0) }
+  }
+  
+  @keyframes bounce {
+    0%, 100% { 
+      transform: scale(0.0);
+      -webkit-transform: scale(0.0);
+    } 50% { 
+      transform: scale(1.0);
+      -webkit-transform: scale(1.0);
     }
   }
