--- a/Cards/Cards.css
+++ b/Cards/Cards.css
@@ -1,27 +1,104 @@
-.card-container {
+.continer-card-one {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    flex-direction: column;
-    padding: 5px 10px;
 }
-.card-one-top {
-    width: 100%;
+
+.card-one-container {
+    width: 400px;
+    height: 120px;
+    margin: 10px;
+}
+.card-one-success, .card-one-error, .card-one-info, .card-one-warning {
     display: flex;
-    height: 20%;
+    width: 100%;
+    height: 120px;
+    border-radius: .8em;
+    padding: 5px;
+    -webkit-box-shadow: 5px 5px 11px 0px rgba(0,0,0,0.47); 
+    box-shadow: 5px 5px 11px 0px rgba(0,0,0,0.47);
+}
+.card-one-success {
+    border: 1px solid var(--success-color);
+    background-color: var(--success-color);
+}
+.card-one-error {
+    border: 1px solid var(--error-color);
+    background-color: var(--error-color);
+}
+.card-one-warning {
+    border: 1px solid var(--warning-color);
+    background-color: var(--warning-color);
 }
 .card-one-image {
-    max-width: 100%;
     display: flex;
-    justify-content: center;
 }
-.card-one-image > svg {
-    
+.card-one-image-container {
+    width: 180px;
+    height: 120px;
+    text-align: center;
 }
-@media (max-width: 767px) { }
+.card-one-image-container::before {
+    content:"";
+    display: block;
+    width:150px;
+    height:100px;
+    background-color: var(--tertiary-color);
+    margin: auto;
+    border-radius: 50%;
+    margin-top: 5px;
+}   
+.img-one {
+    margin-top: -170px;
+    max-height: 200px;
+    max-width: 150px;
+}
+
+.card-one-text {
+    max-height: 120px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    overflow: hidden;
+}
+
+.card-one-text > h3 { 
+    text-align: center;
+    font-size: 30px;
+    margin: 0;
+    font-family: 'Dancing Script', cursive;
+    font-weight: bolder;
+}
+.card-one-text > p {
+    border-top: 2px solid var(--tertiary-color);
+}
+
 @media (max-width: 480px) {
-    .card-container {
-        width: 100%;
-        max-height: 100vh;
-        border: 1px solid;
+    .card-one-container {
+        width: 90%;
+    }
+    .card-one-success, .card-one-error, .card-one-info, .card-one-warning { 
+        padding: 0;
+    }
+    .card-one-image-container {
+        width: 130px;
+    }
+    .card-one-image-container::before {
+        width:120px;
+        height:100px;
+        margin-top: 10px;
+    }   
+    .img-one {
+        margin-top: -110px;
+        max-height: 150px;
+        max-width: 120px;
+    }  
+    .card-one-text > h3 { 
+        margin: 0;
+    }
+    .card-one-text > p { 
+        margin: 0 10px;
     }  
 }
+
+@media (max-width: 767px) { }
