--- a/Cards/Cards.css
+++ b/Cards/Cards.css
@@ -1,7 +1,8 @@
-.continer-card-one {
+.container-card-one, .container-card-two {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 30px;
 }
 
 .card-one-container {
@@ -9,24 +10,33 @@
     height: 120px;
     margin: 10px;
 }
-.card-one-success, .card-one-error, .card-one-info, .card-one-warning {
+.card-one-success,
+.card-one-error,
+.card-one-info,
+.card-one-warning,
+.card-two-success {
     display: flex;
     width: 100%;
-    height: 120px;
     border-radius: .8em;
     padding: 5px;
     -webkit-box-shadow: 5px 5px 11px 0px rgba(0,0,0,0.47); 
     box-shadow: 5px 5px 11px 0px rgba(0,0,0,0.47);
 }
 .card-one-success {
+    height: 120px;
     border: 1px solid var(--success-color);
     background-color: var(--success-color);
 }
 .card-one-error {
+    height: 120px;
     border: 1px solid var(--error-color);
     background-color: var(--error-color);
 }
+.card-one-info {
+    height: 120px;
+}
 .card-one-warning {
+    height: 120px;
     border: 1px solid var(--warning-color);
     background-color: var(--warning-color);
 }
@@ -102,3 +112,52 @@
 }
 
 @media (max-width: 767px) { }
+
+.card-two-container {
+    height: 300px;
+    width: 500px;
+}
+.card-two-success {
+    height: 300px; 
+    padding: 0;
+    margin: 0;
+}
+.img-lateral {
+    width: 50%;
+    border-right: 1px solid var(--success-color);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-top-left-radius: .8em;
+    border-bottom-left-radius: .8em;
+}
+.icon-card, .img-lateral {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;    
+}
+.icon-card > svg {
+    margin-top: -90px;
+    position: absolute;
+    margin-left: -40px;
+    border-radius: 50%;
+    width: 75px;
+    height: 75px;
+    border: 7px solid white;
+    padding: 5px;
+    background-color: var(--success-color);
+}
+.card-two-text-container, .card-two-logos-container {
+    width: 100%;
+    padding: 10px;
+    text-align: center;
+    justify-content: center;
+}
+.card-two-title {
+    margin-bottom: 30px;
+    margin-left: 40px;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+.card-two-logos-container {
+    align-self: flex-end;
+}
