--- a/App.css
+++ b/App.css
@@ -3,7 +3,7 @@
 @import "./Avatar/Avatar.css";
 @import "./Spinner/Spinner.css";
 @import "./Cards/Cards.css";
-
+@import "./Inputs/Inputs.css";
 
 /*
 COLORS
